gccida/g1/rm_line_notes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1646:1: error: must use 'enum' tag to refer to type 'debug_info_type'
debug_info_type v5; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1648:4: error: expected ';' after expression
rtx v7; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1648:5: error: use of undeclared identifier 'v7'
rtx v7; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1651:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1651:5: error: use of undeclared identifier 'v10'
rtx v10; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1658:1: error: use of undeclared identifier 'v7'
v7 = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1661:17: error: use of undeclared identifier 'v7'
if ( *( _WORD *)v7 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1663:26: error: use of undeclared identifier 'v7'
v8 = (  struct rtx_def *)v7[1]; 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1664:13: error: use of undeclared identifier 'v7'
if ( rtx == v7 ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1666:1: error: use of undeclared identifier 'v10'
v10 = v7; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1666:7: error: use of undeclared identifier 'v7'
v10 = v7; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1670:1: error: use of undeclared identifier 'v10'
v10 = v7; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1670:7: error: use of undeclared identifier 'v7'
v10 = v7; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1673:6: error: use of undeclared identifier 'v10'
v9 = v10; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1674:1: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1674:7: error: use of undeclared identifier 'v10'
v10 = v10[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1684:33: error: use of undeclared identifier 'v10'
v8[1].fld[0].rtwint = ( __int64)v10; 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1685:6: error: use of undeclared identifier 'v10'
if ( v10 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/haifa-sched.c:1686:14: error: use of undeclared identifier 'v10'
*( _QWORD *)&v10[1] = v8; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rm_line_notes/src/obj/haifa-sched.o] Error 1
